# UnnamedGame

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
chrono/: chrono.cpp  chrono.hpp
configuration/: configuration.cpp  configuration.hpp
events/: events.cpp  events.hpp
graphics/: common.hpp  shaders.cpp  shaders.hpp  text_rendering.cpp  text_rendering.hpp  ui.cpp  ui.hpp
graphics/imgui/: imgui_impl_glfw.cpp
logger/: log.hpp
maps/: maps.cpp  maps.hpp  objects.cpp  objects.hpp  position.hpp
random/: random.cpp  random.hpp
runner/: runner.cpp  runner.hpp
